Closed Bug 241424 Opened 22 years ago Closed 22 years ago

proxy panel not shown second time if it's not needed first time

Categories

(SeaMonkey :: Installer, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: ajschult784)

References

Details

Attachments

(2 files)

If you choose setup type that requires no additional XPIs, go forward, then go back and change to one that requires additional XPIs and go forward again, the proxy panel will not be shown. 1. grab SEA installer. 2. delete chatzilla.xpi 3. go through installer. choose Typical or Navigator install type. 4. hit next. 5. hit back. 6. choose Complete install type. 7. hit next The proxy panel is not shown, even though it would be shown if you just did steps 1,2,6,7
Attached patch patchSplinter Review
the widgets could be created lazily, but I don't see the payoff there...
Attachment #146860 - Flags: review?(dveditz)
Comment on attachment 146860 [details] [diff] [review] patch r=dveditz
Attachment #146860 - Flags: review?(dveditz) → review+
Attachment #146860 - Flags: superreview?(bryner)
Attachment #146860 - Flags: superreview?(bryner) → superreview+
fixed
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
QA Contact: bugzilla → benc
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: