Bug 241424 proxy panel not shown second time if it's not needed first time patch by ajschult@mindspring.com r=dveditz sr=bryner